--- a/views/education.html
+++ b/views/education.html
@@ -1,89 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Militsa Sotirova</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
-    <link href="../styles/pages.css" rel="stylesheet">
-	</head>
 
-	<body>
-		<header>
-				<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
-				<a href="../index.html"><h1>Militsa Sotirova</h1></a>
+<head>
+	<title>Militsa Sotirova</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
+	<link href="../styles/pages.css" rel="stylesheet">
+</head>
 
-				<div class="grid-container">
-						<div class="grid-item">
-								<p><a href="./aboutme.html"><strong>About Me</strong></a></p>
-						</div>
+<body>
+	<header>
+		<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
+		<a href="../index.html">
+			<h1>Militsa Sotirova</h1>
+		</a>
 
-						<div class="grid-item">
-								<p><a id="current" href="./education.html">Education</a></p>
-						</div>
+		<div class="grid-container">
+			<div class="grid-item">
+				<p><a href="./aboutme.html">About Me</a></p>
+			</div>
 
-						<div class="grid-item">
-								<p><a href="./experience.html"><strong>Experience</strong></a></p>
-						</div>
+			<div class="grid-item">
+				<p><a id="current" href="./education.html">Education</a></p>
+			</div>
 
-						<div class="grid-item">
-								<p><a href="./projects.html"><strong>Projects</strong></a></p>
-						</div>
-				</div>
+			<div class="grid-item">
+				<p><a href="./experience.html">Experience</a></p>
+			</div>
 
-		</header>
-
-		<div class="page-content">
-			<div class="education-grid-container">
-	        <div class="education-grid-item">
-						<img src="../images/cornell_seal_simple_black.svg" class="education-image" title="cornell" alt="cornell">
-					</div>
-
-					<div class="education-grid-item">
-						<h2>Cornell University</h2>
-						<h3><strong>School of Engineering</strong>: B.S. Computer Science, Dyson Business minor</h3>
-						<p>August 2018 - May 2022</p>
-						<p>Ithaca, NY</p>
-						<p>Coursework:</p>
-						<ul>
-							<li>Data Structures and Functional Programming (CS 3110)</li>
-							<li>Digital Logic and Computer Organization (ENGRD 2300)</li>
-							<li>Object-Oriented Design and Data Structures - Honors (CS 2112)</li>
-							<li>Discrete Structures (CS 2800)</li>
-							<li>The Computing Technology Inside Your Smartphone (ENGRI 1210)</li>
-							<li>Linear Algebra for Engineers (MATH 2940)</li>
-							<li>Multivariable Calculus for Engineers (MATH 1920)</li>
-							<li>Mechanics/Electromagnetism (PHYS 1112/2213)</li>
-							<li>Finance (HADM 2250)</li>
-							<li>Financial Accounting (AEM 2210)</li>
-						</ul>
-					</div>
-
-					<div class="education-grid-item">
-								<img src="../images/tjhsst.png" class="education-image" title="tjhsst" alt="tjhsst">
-					</div>
-
-					<div class="education-grid-item">
-						<h2>Thomas Jefferson High School for Science & Technology (TJHSST)</h2>
-						<h3><strong>Computer Systems</strong>: TJHSST Advanced Diploma</h3>
-						<p>August 2014 - May 2018</p>
-						<p>Alexandria, VA</p>
-						<p>Coursework:</p>
-						<ul>
-							<li>Computer Systems Research Lab</li>
-							<li>Parallel Computing</li>
-							<li>Cryptography</li>
-							<li>Artificial Intelligence</li>
-							<li>Computer Vision</li>
-							<li>Mobile Application Development</li>
-						</ul>
-					</div>
+			<div class="grid-item">
+				<p><a href="./projects.html">Projects</a></p>
 			</div>
 		</div>
 
-		<footer>
-			<h3>Contact Me:</h3>
-			<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email" alt="email"></a>
-			<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github" alt="github"></a>
-			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
-		</footer>
-	</body>
+	</header>
+
+	<div class="page-content">
+		<div class="education-grid-container">
+			<div class="education-grid-item">
+				<img src="../images/cornell_seal_simple_black.svg" class="education-image" title="cornell" alt="cornell">
+			</div>
+
+			<div class="education-grid-item">
+				<h2>Cornell University</h2>
+				<h3><strong>School of Engineering</strong>: B.S. Computer Science, Dyson Business minor</h3>
+				<p>August 2018 - December 2021</p>
+				<p>Ithaca, NY</p>
+				<p>Coursework:</p>
+				<ul>
+					<li>Distributed Computing Principles (CS 5414)</li>
+					<li>Introduction to Computer Vision (CS 4670)</li>
+					<li>Operating Systems (CS 4410)</li>
+					<li>Introduction to Analysis of Algorithms (CS 4820)</li>
+					<li>Embedded Systems (CS 3420)</li>
+					<li>Data Structures and Functional Programming (CS 3110)</li>
+					<li>Digital Logic and Computer Organization (ENGRD 2300)</li>
+					<li>Object-Oriented Design and Data Structures - Honors (CS 2112)</li>
+					<li>Discrete Structures (CS 2800)</li>
+					<li>The Computing Technology Inside Your Smartphone (ENGRI 1210)</li>
+					<li>Linear Algebra for Engineers (MATH 2940)</li>
+					<li>Multivariable Calculus for Engineers (MATH 1920)</li>
+					<li>Mechanics/Electromagnetism (PHYS 1112/2213)</li>
+					<br>
+					<li>Introduction to Game Theory (ECON 3801)</li>
+					<li>Futures, Options, and Financial Derivatives (AEM 4210)</li>
+					<li>Market Dynamics, Computer Simulation and Modeling (AEM 4660)</li>
+					<li>Marketing Principles (HADM 2410)</li>
+					<li>Finance (HADM 2250)</li>
+					<li>Financial Accounting (AEM 2210)</li>
+					<br>
+					<li>Communicating Digital Identity (ENGRC 3025)</li>
+				</ul>
+			</div>
+
+			<div class="education-grid-item">
+				<img src="../images/tjhsst.png" class="education-image" title="tjhsst" alt="tjhsst">
+			</div>
+
+			<div class="education-grid-item">
+				<h2>Thomas Jefferson High School for Science & Technology (TJHSST)</h2>
+				<h3><strong>Computer Systems</strong>: TJHSST Advanced Diploma</h3>
+				<p>August 2014 - May 2018</p>
+				<p>Alexandria, VA</p>
+				<p>Coursework:</p>
+				<ul>
+					<li>Computer Systems Research Lab</li>
+					<li>Parallel Computing</li>
+					<li>Cryptography</li>
+					<li>Artificial Intelligence</li>
+					<li>Computer Vision</li>
+					<li>Mobile Application Development</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<footer>
+		<h3>Contact Me:</h3>
+		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email"
+				alt="email"></a>
+		<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github"
+				alt="github"></a>
+		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img
+				src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+	</footer>
+</body>
+
 </html>
