--- a/views/experience.html
+++ b/views/experience.html
@@ -1,100 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Militsa Sotirova</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
-    <link href="../styles/pages.css" rel="stylesheet">
-	</head>
 
-	<body>
-		<header>
-				<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
-				<a href="../index.html"><h1>Militsa Sotirova</h1></a>
+<head>
+	<title>Militsa Sotirova</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
+	<link href="../styles/pages.css" rel="stylesheet">
+</head>
 
-				<div class="grid-container">
-						<div class="grid-item">
-								<p><a href="./aboutme.html"><strong>About Me</strong></a></p>
-						</div>
+<body>
+	<header>
+		<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
+		<a href="../index.html">
+			<h1>Militsa Sotirova</h1>
+		</a>
 
-						<div class="grid-item">
-								<p><a href="./education.html"><strong>Education</strong></a></p>
-						</div>
+		<div class="grid-container">
+			<div class="grid-item">
+				<p><a href="./aboutme.html">About Me</a></p>
+			</div>
 
-						<div class="grid-item">
-								<p><a id="current" href="./experience.html">Experience</a></p>
-						</div>
+			<div class="grid-item">
+				<p><a href="./education.html">Education</a></p>
+			</div>
 
-						<div class="grid-item">
-								<p><a href="./projects.html"><strong>Projects</strong></a></p>
-						</div>
-				</div>
+			<div class="grid-item">
+				<p><a id="current" href="./experience.html">Experience</a></p>
+			</div>
 
-		</header>
-
-		<div class="page-content">
-			<div class="experience-grid-container">
-	        <div class="experience-grid-item">
-						<h1><strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS)</h1>
-						<p>November, 2018 - PRESENT</p>
-						<p>Cornell University</p>
-					</div>
-
-					<div class="experience-grid-item">
-						<p>RuFaS is a simulation written in Python that models nutrient flow through a farm system based
-							on user inputs as well as published research. There are four main modules: animal, soil, manure,
-							and crop, and I primarily work in the animal module. Throughout my time on this project,
-							I have learned a lot. This is an interdisciplinary project, as it is a computer simulation of an
-							animal/farm system. However, even though I have no background in animal or farm science, I have been
-							able to contribute a significant amount to the code base for the simulation:</p>
-						<ul>
-							<li>I am currently looking into ways of optimizing and parallelizing the code to improve performance.</li>
-							<li>I restructured the entire animal module so that it takes more user input on the pens in the farm, the
-								life cycle of the animals, and the general animal management strategy the user would like to simulate.
-								Another outcome of this restructuring was that it more modular in nature, making understanding the
-								code easier.</li>
-							<li>I coded the ration formulation as well as manure excretion component calculations for lactating cows.</li>
-							<li>I coded the output files for the animal module, as well as added a feature for a different style of input
-								to the simulation that is more intuitive for the general user.</li>
-							<li>The project has an emphasis on documentation, as we want future developers to be able to easily contribute
-								and users to be able to understand exactly what the simulation is doing.</li>
-						</ul>
-						<br>
-						<p>I presented my work in August, 2019 at the RuFaS annual meeting in New York City to an audience of programmers,
-							the general leaders of the project, and people from the industry who would potentially use the final product.</p>
-						<br>
-						<p>Throughout my time working on this project I have learned a lot about communication. People from universities
-						all over the country work on different aspects of RuFaS and communicating our progress and issues is very important.
-						I attend two biweekly meetings, one being a programmers meeting where we give general updates as well as bring up
-						any issues that are relevant to the whole simulation, and the other being for the overall animal module where
-						we discuss developments in algorithms for calculations.</p>
-					</div>
-
-					<div class="experience-grid-item">
-						<h1>Reading Level Analysis Research Project</h1>
-						<p>August, 2017 - May, 2018</p>
-						<p>Thomas Jefferson High School for Science & Technology (TJHSST)</p>
-					</div>
-
-					<div class="experience-grid-item" id="reading-level">
-						<p><strong>Improving Reading Level Evaluations Using Sentence Structure and Word Frequency</strong></p>
-						<p>During my senior year of high school, I conducted a research project of my own design from start to finish.
-						I analyzed the reading levels of different texts using a formula that I created. I learned a lot about Python,
-						how to conduct computer research, full stack web design, as well as communicating my results. Under the mentorship of my lab director, I
-						regularly practiced presenting my progress to a group. I wrote a paper and created a poster to display the progress
-						I made over the year and I presented my final work
-						at tjSTAR, an annual symposium to showcase research, hosted by my high school.</p>
-						<br>
-						<p>More technical information can be found <a href="./projects.html">here</a>.</p>
-						<p><a href="https://github.com/militsasotirova/reading-level-analysis">GitHub Repo</a> | <a href="../resources/Reading_Level_Analysis.pdf" target="_blank">Paper</a> | <a href="../resources/Poster.pdf" target="_blank">Poster</a> | <a href="https://youtu.be/vwczaF5nrdU" target="_blank">Demo Video Link</a></p>
-					</div>
+			<div class="grid-item">
+				<p><a href="./projects.html">Projects</a></p>
 			</div>
 		</div>
 
-		<footer>
-			<h3>Contact Me:</h3>
-			<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email" alt="email"></a>
-			<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github" alt="github"></a>
-			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
-		</footer>
-	</body>
+	</header>
+
+	<div class="page-content">
+		<div class="experience-grid-container">
+			<div class="experience-grid-item">
+				<h1><strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS)</h1>
+				<p>November, 2018 - PRESENT</p>
+				<p>Cornell University</p>
+			</div>
+
+			<div class="experience-grid-item">
+				<p>RuFaS is a simulation written in Python that models nutrient flow through a farm system based
+					on user inputs as well as published research. There are four main modules: animal, soil, manure,
+					and crop, and I primarily work in the animal module. Throughout my time on this project,
+					I have learned a lot. This is an interdisciplinary project, as it is a computer simulation of an
+					animal/farm system. However, even though I have no background in animal or farm science, I have been
+					able to contribute a significant amount to the code base for the simulation:</p>
+				<ul>
+					<li>I am currently looking into ways of optimizing and parallelizing the code to improve performance.</li>
+					<li>I restructured the entire animal module so that it takes more user input on the pens in the farm, the
+						life cycle of the animals, and the general animal management strategy the user would like to simulate.
+						Another outcome of this restructuring was that it more modular in nature, making understanding the
+						code easier.</li>
+					<li>I coded the ration formulation as well as manure excretion component calculations for lactating cows.</li>
+					<li>I coded the output files for the animal module, as well as added a feature for a different style of input
+						to the simulation that is more intuitive for the general user.</li>
+					<li>The project has an emphasis on documentation, as we want future developers to be able to easily contribute
+						and users to be able to understand exactly what the simulation is doing.</li>
+				</ul>
+				<br>
+				<p>I presented my work in August, 2019 at the RuFaS annual meeting in New York City to an audience of
+					programmers,
+					the general leaders of the project, and people from the industry who would potentially use the final product.
+				</p>
+				<br>
+				<p>Throughout my time working on this project I have learned a lot about communication. People from universities
+					all over the country work on different aspects of RuFaS and communicating our progress and issues is very
+					important.
+					I attend two biweekly meetings, one being a programmers meeting where we give general updates as well as bring
+					up
+					any issues that are relevant to the whole simulation, and the other being for the overall animal module where
+					we discuss developments in algorithms for calculations.</p>
+			</div>
+
+			<div class="experience-grid-item">
+				<h1>Reading Level Analysis Research Project</h1>
+				<p>August, 2017 - May, 2018</p>
+				<p>Thomas Jefferson High School for Science & Technology (TJHSST)</p>
+			</div>
+
+			<div class="experience-grid-item" id="reading-level">
+				<p><strong>Improving Reading Level Evaluations Using Sentence Structure and Word Frequency</strong></p>
+				<p>During my senior year of high school, I conducted a research project of my own design from start to finish.
+					I analyzed the reading levels of different texts using a formula that I created. I learned a lot about Python,
+					how to conduct computer research, full stack web design, as well as communicating my results. Under the
+					mentorship of my lab director, I
+					regularly practiced presenting my progress to a group. I wrote a paper and created a poster to display the
+					progress
+					I made over the year and I presented my final work
+					at tjSTAR, an annual symposium to showcase research, hosted by my high school.</p>
+				<br>
+				<p>More technical information can be found <a href="./projects.html">here</a>.</p>
+				<p><a href="https://github.com/militsasotirova/reading-level-analysis">GitHub Repo</a> | <a
+						href="../resources/Reading_Level_Analysis.pdf" target="_blank">Paper</a> | <a href="../resources/Poster.pdf"
+						target="_blank">Poster</a> | <a href="https://youtu.be/vwczaF5nrdU" target="_blank">Demo Video Link</a></p>
+			</div>
+		</div>
+	</div>
+
+	<footer>
+		<h3>Contact Me:</h3>
+		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email"
+				alt="email"></a>
+		<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github"
+				alt="github"></a>
+		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img
+				src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+	</footer>
+</body>
+
 </html>
