--- a/styles/pages.css
+++ b/styles/pages.css
@@ -8,16 +8,19 @@ html {
 }
 
 body {
-    height: 100%;
+	height: 100%;
+	/*display: flex;*/
+	align-items: center;
+  justify-content: center;
     resize: vertical;
     font-family: 'Space Mono', monospace;
-    color: black;
-    background-color: #ECF0F1;
+    color: #18314F;
+    background-color: #fcfcf9;
     line-height: 150%;
 }
 
 header {
-  background-image: linear-gradient(#2C3E50, #46596C);
+  background-image: linear-gradient(#bfe4be, #effae5);
   height: 125px;
 }
 
@@ -25,7 +28,7 @@ header img {
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  border: 1px solid #C9E4CA;
+  border: 1px solid #effae5;
   float: left;
   margin: 10px;
 }
@@ -42,21 +45,21 @@ p {
 
 header a {
   text-decoration: none;
-  color: #ECF0F1;
+  color: #18314F;
 }
 
 a {
-  text-decoration: underline;
-  color: black;
-
+  text-decoration: none;
+  color: #a833b9;
 }
 
 a:hover {
-  color: #ACB2B5;
+  color: #7a8a8a;
 }
 
 #current {
-  color: #ACB2B5;
+  color: #7a8a8a;
+  font-weight: 300;
 }
 
 footer {
@@ -85,7 +88,7 @@ footer img {
 .page-content {
   font-size: 90%;
   margin: 40px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 ul {
@@ -141,8 +144,8 @@ ul {
 
 .projects-grid-container {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-gap: 50px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
 }
 
 .projects-grid-item {
@@ -153,7 +156,22 @@ ul {
   line-height: 25px;
 }
 
-.formula-image {
-  height: 100px;
-  width: 650px;
+.card {
+  box-shadow: 0 4px 8px 0 rgba(63, 60, 60, 0.2);
+  transition: 0.3s;
+  border-radius: 5px; 
+  padding: 2px 16px;
+  margin: 10px 10px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 #91917b; 
+}
+
+.project-card {
+  text-decoration: none;
+  color: #18314F;
+}
+.project-card:hover {
+  color: #18314F;
 }
