--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -1,77 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Militsa Sotirova</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
-	  <link href="../styles/pages.css" rel="stylesheet">
-	</head>
 
-	<body>
-		<header>
-				<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
-				<a href="../index.html"><h1>Militsa Sotirova</h1></a>
+<head>
+	<title>Militsa Sotirova</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
+	<link href="../styles/pages.css" rel="stylesheet">
+</head>
 
-				<div class="grid-container">
-		        <div class="grid-item">
-		            <p><a id="current" href="./aboutme.html">About Me</a></p>
-		        </div>
+<body>
+	<header>
+		<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
+		<a href="../index.html">
+			<h1>Militsa Sotirova</h1>
+		</a>
 
-		        <div class="grid-item">
-		            <p><a href="./education.html"><strong>Education</strong></a></p>
-		        </div>
+		<div class="grid-container">
+			<div class="grid-item">
+				<p><a id="current" href="./aboutme.html">About Me</a></p>
+			</div>
 
-		        <div class="grid-item">
-		            <p><a href="./experience.html"><strong>Experience</strong></a></p>
-		        </div>
+			<div class="grid-item">
+				<p><a href="./education.html">Education</a></p>
+			</div>
 
-		        <div class="grid-item">
-		            <p><a href="./projects.html"><strong>Projects</strong></a></p>
-		        </div>
-		    </div>
+			<div class="grid-item">
+				<p><a href="./experience.html">Experience</a></p>
+			</div>
 
-		</header>
-
-		<div class="page-content">
-			<div class="aboutme-grid-container">
-	        <div class="aboutme-grid-item">
-						<p><a href="../resources/resume.pdf" target="_blank">Resume</a> | <a href="https://github.com/militsasotirova" target="_blank">GitHub</a> | <a href="mailto: militsasotirova@gmail.com" target="_blank">Email</a> | <a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank">LinkedIn</a></p>
-						<br>
-						<p>Programming Languages:</p>
-						<ul>
-							<li>Java</li>
-							<li>Python</li>
-							<li>Golang</li>
-							<li>HTML/CSS</li>
-							<li>familiar with C (MPI)</li>
-						</ul>
-					</div>
-
-					<div class="aboutme-grid-item">
-						<p>Hello!</p>
-						<br>
-						<p>I am a second year student at Cornell University (Engineering School) pursuing a major in Computer Science
-							and a minor in Business. I've been interested in math and computer science since my freshman year of high school at
-							Thomas Jefferson High School for Science and Technology in the DC area. </p>
-						<br>
-						<p>I'm currently working on <strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS), which
-						is a simulation that models nutrient flow through a farm system based on user inputs as well as published research.
-						More information can be found <a href="./experience.html">here</a>.</p>
-						<br>
-						<p>During my senior year of high school, I conducted a research project from start to finish to create a formula to
-							analyze the reading level of text. More information can be found <a href="./experience.html#reading-level">here</a>.</p>
-						<br>
-						<p>Throughout high school, I taught a class that introduced middle school kids to different STEM topics like the physics
-							of light, aerodynamics, cryptography, architecture, natural disasters, etc. I was also a coach for two swim teams
-							and helped kids learn how to swim and be part of a team environment.</p>
-					</div>
+			<div class="grid-item">
+				<p><a href="./projects.html">Projects</a></p>
 			</div>
 		</div>
 
-		<footer>
-			<h3>Contact Me:</h3>
-			<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email" alt="email"></a>
-			<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github" alt="github"></a>
-			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
-		</footer>
-	</body>
+	</header>
+
+	<div class="page-content">
+		<div class="aboutme-grid-container">
+			<div class="aboutme-grid-item">
+				<p><a  href="../resources/resume.pdf" target="_blank">Resume</a> | <a  href="https://github.com/militsasotirova"
+						target="_blank">GitHub</a> | <a  href="mailto: militsasotirova@gmail.com" target="_blank">Email</a> | <a 
+						href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank">LinkedIn</a></p>
+				<br>
+				<p>Programming Languages:</p>
+				<ul>
+					<li>Java</li>
+					<li>Python</li>
+					<li>Golang</li>
+					<li>HTML/CSS (e.g. this <a href="https://github.com/militsasotirova/militsasotirova.github.io" target="_blank">website</a>!)</li>
+					<li>Familiar with C (MPI)</li>
+				</ul>
+			</div>
+
+			<div class="aboutme-grid-item">
+				<p>Hello!</p>
+				<br>
+				<p>I am a third year student at Cornell University (Engineering School) pursuing a major in Computer Science
+					and a minor in Business. I've been interested in math and computer science since my freshman year of high
+					school at
+					Thomas Jefferson High School for Science and Technology in the DC area. </p>
+				<br>
+				<p>I'm currently working on <strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS),
+					which
+					is a simulation that models nutrient flow through a farm system based on user inputs as well as published
+					research.
+					More information can be found <a  href="./experience.html">here</a>.</p>
+				<br>
+				<p>During my senior year of high school, I conducted a research project from start to finish to create a formula
+					to
+					analyze the reading level of text. More information can be found <a
+					 href="./experience.html#reading-level">here</a>.</p>
+				<br>
+				<p>Throughout high school, I taught a class that introduced middle school kids to different STEM topics like the
+					physics
+					of light, aerodynamics, cryptography, architecture, natural disasters, etc. I was also a coach for two swim
+					teams
+					and helped kids learn how to swim and be part of a team environment.</p>
+			</div>
+		</div>
+	</div>
+
+	<footer>
+		<h3>Contact Me:</h3>
+		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email"
+				alt="email"></a>
+		<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github"
+				alt="github"></a>
+		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img
+				src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+	</footer>
+</body>
+
 </html>
