--- a/views/projects.html
+++ b/views/projects.html
@@ -1,86 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Militsa Sotirova</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
-    <link href="../styles/pages.css" rel="stylesheet">
-	</head>
 
-	<body>
-		<header>
-				<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
-				<a href="../index.html"><h1>Militsa Sotirova</h1></a>
+<head>
+	<title>Militsa Sotirova</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
+	<link href="../styles/pages.css" rel="stylesheet">
+</head>
 
-				<div class="grid-container">
-						<div class="grid-item">
-								<p><a href="./aboutme.html"><strong>About Me</strong></a></p>
-						</div>
+<body>
+	<header>
+		<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
+		<a href="../index.html">
+			<h1>Militsa Sotirova</h1>
+		</a>
 
-						<div class="grid-item">
-								<p><a href="./education.html"><strong>Education</strong></a></p>
-						</div>
-
-						<div class="grid-item">
-								<p><a href="./experience.html"><strong>Experience</strong></a></p>
-						</div>
-
-						<div class="grid-item">
-								<p><a id="current" href="./projects.html">Projects</a></p>
-						</div>
-				</div>
-
-		</header>
-
-		<div class="page-content">
-			<div class="projects-grid-container">
-				<div class="projects-grid-item">
-					<h1>Personal Website</h1>
-					<p><a href="https://github.com/militsasotirova/militsasotirova.github.io" target="_blank">GitHub Repo</a></p>
-				</div>
-
-				<div class="projects-grid-item">
-
-				</div>
-
-	        <div class="projects-grid-item">
-						<h1>Improving Reading Level Evaluations Using Sentence Structure and Word Frequency</h1>
-						<p><a href="https://github.com/militsasotirova/reading-level-analysis">GitHub Repo</a> | <a href="../resources/Reading_Level_Analysis.pdf" target="_blank">Paper</a> | <a href="../resources/Poster.pdf" target="_blank">Poster</a> | <a href="https://youtu.be/vwczaF5nrdU" target="_blank">Demo Video Link</a></p>
-					</div>
-
-					<div class="projects-grid-item">
-						<p><strong>Summary:</strong></p>
-						<p>During my senior year of high school, I conducted a research project of my own design from start to finish.
-						I analyzed the reading levels of different texts using a formula that I created (details and justifications in <a href="../resources/Reading_Level_Analysis.pdf" target="_blank">paper</a>):</p>
-						<img src="../images/formula.png" class="formula-image" title="formula" alt="formula">
-						<p></p>
-						<br>
-						<p>I used the Oxford English Dictionary API for the frequencies of words in modern English and the Web-based L2 Syntactic Complexity Analyzer created by Haiyang Ai
-						to count the number of clauses found in a given body of text. I created a website with Python/CherryPy as the backend (demo in video below) for users to be able to input their
-						own text and see how my analysis compares to traditional ones.</p>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/vwczaF5nrdU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						<p></p>
-						<br>
-						<p class="abstract"><i>Abstract:</i></p>
-						<p class="abstract"><i>People have been using readability formulas, or reading level formulas, for a wide variety of uses for many years.
-							These formulas usually depend on factors like the number of characters, words, sentences, syllables per word, etc.
-							there are in a sample of text. I created a formula which relies on the number of clauses in a sentence, which
-							indicates the sentence complexity, as well as the vocabulary difficulty, which is based on the frequency of the words
-							in modern English. In addition, I created a scale to go along with my formula so a user can see where their text
-							 falls with respect to other, more well-known texts.</i></p>
-					</div>
-
-
+		<div class="grid-container">
+			<div class="grid-item">
+				<p><a href="./aboutme.html">About Me</a></p>
 			</div>
 
+			<div class="grid-item">
+				<p><a href="./education.html">Education</a></p>
+			</div>
 
+			<div class="grid-item">
+				<p><a href="./experience.html">Experience</a></p>
+			</div>
 
+			<div class="grid-item">
+				<p><a id="current" href="./projects.html">Projects</a></p>
+			</div>
 		</div>
 
-		<footer>
-			<h3>Contact Me:</h3>
-			<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email" alt="email"></a>
-			<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github" alt="github"></a>
-			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
-		</footer>
-	</body>
+	</header>
+	<div class="page-content">
+		<div class="projects-grid-container">
+
+			<div class="projects-grid-item">
+				<a class="project-card" href="https://github.com/militsasotirova/reading-level-analysis" target="_blank">
+					<div class="card">
+						<p><strong>Reading Level Analysis</strong></p>
+						<p>I created a reading level formula to analyze texts. I also built a 
+							website using Python/CherryPy for users to input their own text and see 
+							how my analysis compares to traditional ones.</p>
+						</div>
+				</a>
+			</div>
+
+			<div class="projects-grid-item">
+				<a class="project-card" href="https://github.com/CodingPerudo/rudo" target="_blank">
+					<div class="card">
+						<p><strong>Liar's Dice</strong></p>
+						<p>I designed and implemented an online version of a multiplayer 
+							Liar's Dice (Perudo) game using Python and JavaScript with the 
+							functionality of hosting mutiple game sessions.</p>
+						</div>
+				</a>
+			</div>
+
+			<div class="projects-grid-item">
+				<a class="project-card" href="https://github.com/militsasotirova/levenshtein" target="_blank">
+					<div class="card">
+						<p><strong>Levenshtein Edit Distance</strong></p>
+						<p>I implemented a Go package to calculate the Levenshtein Edit 
+							distance between two strings (number of single character edits to 
+							transform one into the other) given by the user.
+					</div>
+				</a>
+			</div>
+
+			<div class="projects-grid-item">
+				<a class="project-card" href="https://github.com/militsasotirova/currency-converter" target="_blank">
+					<div class="card">
+						<div class="container">
+							<p><strong>Currency Converter</strong></p>
+							<p>I built a server using Go that hosts a website that converts currencies using the CurrencyLayer API.
+							</div>
+					</div>
+				</a>
+			</div>
+
+		</div>
+	</div>
+
+	<footer>
+		<h3>Contact Me:</h3>
+		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email"
+				alt="email"></a>
+		<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github"
+				alt="github"></a>
+		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img
+				src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+	</footer>
+</body>
+
 </html>
