experience modals and updated about me

--- a/styles/pages.css
+++ b/styles/pages.css
@@ -9,14 +9,13 @@ html {
 
 body {
 	height: 100%;
-	/*display: flex;*/
 	align-items: center;
   justify-content: center;
-    resize: vertical;
-    font-family: 'Space Mono', monospace;
-    color: #18314F;
-    background-color: #fcfcf9;
-    line-height: 150%;
+  resize: vertical;
+  font-family: 'Space Mono', monospace;
+  color: #18314F;
+  background-color: #fcfcf9;
+  line-height: 150%;
 }
 
 header {
@@ -58,7 +57,6 @@ a:hover {
 }
 
 #current {
-  color: #7a8a8a;
   font-weight: 300;
 }
 
@@ -126,8 +124,9 @@ ul {
 
 .experience-grid-container {
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-gap: 90px;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
+  padding-bottom: 50px;
 }
 
 .experience-grid-item {
@@ -140,6 +139,43 @@ ul {
 
 .experience-grid-item li {
   line-height: 25px;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .projects-grid-container {
@@ -166,6 +202,7 @@ ul {
 
 .card:hover {
   box-shadow: 0 8px 16px 0 #91917b; 
+  cursor: pointer;
 }
 
 .project-card {
