--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -16,7 +16,7 @@
 
 		<div class="grid-container">
 			<div class="grid-item">
-				<p><a id="current" href="./aboutme.html">About Me</a></p>
+				<p><a id="current" href="./aboutme.html"><strong>About Me</strong></a></p>
 			</div>
 
 			<div class="grid-item">
@@ -37,8 +37,8 @@
 	<div class="page-content">
 		<div class="aboutme-grid-container">
 			<div class="aboutme-grid-item">
-				<p><a  href="../resources/resume.pdf" target="_blank">Resume</a> | <a  href="https://github.com/militsasotirova"
-						target="_blank">GitHub</a> | <a  href="mailto: militsasotirova@gmail.com" target="_blank">Email</a> | <a
+				<p><a href="../resources/resume.pdf" target="_blank">Resume</a> | <a href="https://github.com/militsasotirova"
+						target="_blank">GitHub</a> | <a href="mailto: militsasotirova@gmail.com" target="_blank">Email</a> | <a
 						href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank">LinkedIn</a></p>
 				<br>
 				<p>Programming Languages:</p>
@@ -49,35 +49,27 @@
 					<li>Golang</li>
 					<li>OCaml</li>
 					<li>C/C++</li>
-					<li>JavaScript</li>					
-					<li>HTML/CSS (e.g. this <a href="https://github.com/militsasotirova/militsasotirova.github.io" target="_blank">website</a>!)</li>
+					<li>JavaScript</li>
+					<li>HTML/CSS (e.g. this <a href="https://github.com/militsasotirova/militsasotirova.github.io"
+							target="_blank">website</a>!)</li>
 				</ul>
 			</div>
 
 			<div class="aboutme-grid-item">
-				<p>Hello!</p>
-				<br>
-				<p>I am a third year student at Cornell University (Engineering School) pursuing a major in Computer Science
+				<p>Hello! My name is Militsa and I am a third year student at Cornell University (Engineering School)
+					pursuing a major in Computer Science
 					and a minor in Business. I've been interested in math and computer science since my freshman year of high
-					school at
-					Thomas Jefferson High School for Science and Technology in the DC area. </p>
+					school at Thomas Jefferson High School for Science and Technology. </p>
 				<br>
 				<p>I'm currently working on <strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS),
 					which
 					is a simulation that models nutrient flow through a farm system based on user inputs as well as published
 					research.
-					More information can be found <a  href="./experience.html">here</a>.</p>
+					More information can be found <a href="./experience.html">here</a>.</p>
 				<br>
-				<p>During my senior year of high school, I conducted a research project from start to finish to create a formula
-					to
-					analyze the reading level of text. More information can be found <a
-					 href="./experience.html#reading-level">here</a>.</p>
-				<br>
-				<p>Throughout high school, I taught a class that introduced middle school kids to different STEM topics like the
-					physics
-					of light, aerodynamics, cryptography, architecture, natural disasters, etc. I was also a coach for two swim
-					teams
-					and helped kids learn how to swim and be part of a team environment.</p>
+				<p>Some of my hobbies include swimming, biking, playing spikeball, and other outdoor activities. I also like to
+					read and paint/sketch.
+				</p>
 			</div>
 		</div>
 	</div>
