--- a/views/education.html
+++ b/views/education.html
@@ -20,7 +20,7 @@
 			</div>
 
 			<div class="grid-item">
-				<p><a id="current" href="./education.html">Education</a></p>
+				<p><a id="current" href="./education.html"><strong>Education</strong></a></p>
 			</div>
 
 			<div class="grid-item">
