--- a/views/projects.html
+++ b/views/projects.html
@@ -28,7 +28,7 @@
 			</div>
 
 			<div class="grid-item">
-				<p><a id="current" href="./projects.html">Projects</a></p>
+				<p><a id="current" href="./projects.html"><strong>Projects</strong></a></p>
 			</div>
 		</div>
 
