create dark stylesheets

--- a/styles/light-pages.css
+++ b/styles/light-pages.css
@@ -1,12 +1,3 @@
-html {
-    height: 100%;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
 body {
 	height: 100%;
 	align-items: center;
@@ -32,16 +23,6 @@ header img {
   margin: 10px;
 }
 
-header h1 {
-  float: left;
-  margin-top: 50px;
-  font-weight: 300;
-}
-
-p {
-  font-size: 130%;
-}
-
 header a {
   text-decoration: none;
   color: #18314F;
@@ -54,91 +35,6 @@ a {
 
 a:hover {
   color: #7a8a8a;
-}
-
-#current {
-  font-weight: 300;
-}
-
-footer {
-  margin-top: -10px;
-  text-align: center;
-}
-
-footer img {
-  width: 75px;
-  height: 75px;
-}
-
-.grid-container {
-  width: 55%;
-  height: 25%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  padding-top: 90px;
-  grid-gap: 10px;
-}
-
-.grid-item {
-  justify-self: end;
-}
-
-.page-content {
-  font-size: 90%;
-  margin: 40px;
-  font-family: 'Poppins', sans-serif;
-}
-
-ul {
-  margin-left: 50px;
-  line-height: 20px;
-  font-size: 120%;
-}
-
-.aboutme-grid-container {
-  margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  justify-content: center;
-}
-
-.aboutme-grid-item {
-  margin: auto;
-}
-
-.education-image {
-  height: 200px;
-  width: 200px;
-}
-
-.education-grid-container {
-  display: grid;
-  grid-template-columns: 1fr 6fr;
-  justify-content: center;
-  grid-gap: 50px;
-}
-
-.education-grid-item {
-  line-height: 30px;
-}
-
-.experience-grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 30px;
-  padding-bottom: 50px;
-}
-
-.experience-grid-item {
-  line-height: 40px;
-}
-
-.experience-grid-item p {
-  line-height: 25px;
-}
-
-.experience-grid-item li {
-  line-height: 25px;
 }
 
 .modal {
@@ -157,7 +53,7 @@ ul {
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 7% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
@@ -171,25 +67,10 @@ ul {
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
-
-.projects-grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 20px;
-}
-
-.projects-grid-item {
-  line-height: 40px;
-}
-
-.projects-grid-item p {
-  line-height: 25px;
 }
 
 .card {
@@ -205,6 +86,8 @@ ul {
   cursor: pointer;
 }
 
+/* since project cards are actually links, need to specify text to not look
+like a link */
 .project-card {
   text-decoration: none;
   color: #18314F;
