--- a/views/education.html
+++ b/views/education.html
@@ -4,7 +4,8 @@
 <head>
 	<title>Militsa Sotirova</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
-	<link href="../styles/pages.css" rel="stylesheet">
+	<link href="../styles/all-pages.css" rel="stylesheet">
+	<link href="../styles/light-pages.css" rel="stylesheet">
 </head>
 
 <body>
