--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -5,11 +5,21 @@
 	<title>Militsa Sotirova</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
 	<link href="../styles/all-pages.css" rel="stylesheet">
-	<link href="../styles/light-pages.css" rel="stylesheet">
+	<link href="../styles/light-pages.css" rel="stylesheet" id="theme-link">
+	<link href="../styles/toggle.css" rel="stylesheet">
 </head>
 
 <body>
+	
 	<header>
+		<label class="switch">
+			<input type="checkbox" id="togBtn">
+			<div class="slider round">
+					<span class="on">ON</span>
+					<span class="off">OFF</span>
+			</div>
+		</label>
+
 		<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
 		<a href="../index.html">
 			<h1>Militsa Sotirova</h1>
