--- a/styles/toggle.css
+++ b/styles/toggle.css
@@ -3,7 +3,7 @@
   right: 20px;
   top: 20px;
   display: inline-block;
-  width: 90px;
+  width: 100px;
   height: 34px;
   z-index: 1;
 }
@@ -17,7 +17,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ca2222;
+  background-color: #2d2424;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -29,13 +29,13 @@
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: #a833b9;
   -webkit-transition: .4s;
   transition: .4s;
 }
 
 input:checked + .slider {
-  background-color: #2ab934;
+  background-color: #e4ede5;
 }
 
 input:focus + .slider {
@@ -43,32 +43,36 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(55px);
-  -ms-transform: translateX(55px);
-  transform: translateX(55px);
+  -webkit-transform: translateX(65px);
+  -ms-transform: translateX(65px);
+  transform: translateX(65px);
 }
 
 /*------ ADDED CSS ---------*/
-.on
+.light
 {
   display: none;
+  color: #18314F;
 }
 
-.on, .off
-{
+.dark {
   color: white;
+}
+
+.light, .dark
+{
   position: absolute;
   transform: translate(-50%,-50%);
   top: 50%;
   left: 50%;
   font-size: 10px;
-  font-family: Verdana, sans-serif;
+  font-family: Poppins, sans-serif;
 }
 
-input:checked+ .slider .on
+input:checked+ .slider .light
 {display: block;}
 
-input:checked + .slider .off
+input:checked + .slider .dark
 {display: none;}
 
 /*--------- END --------*/
