--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -15,8 +15,8 @@
 		<label class="switch">
 			<input type="checkbox" id="togBtn">
 			<div class="slider round">
-					<span class="on">ON</span>
-					<span class="off">OFF</span>
+				<span class="light">LIGHT</span>
+				<span class="dark">DARK</span>
 			</div>
 		</label>
 
@@ -94,6 +94,22 @@
 		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img
 				src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
 	</footer>
+
+	<script>
+		const toggleSwitch = document.getElementsByClassName("switch")[0];
+    const theme = document.querySelector("#theme-link");
+
+    function switchTheme(e) {
+        if (e.target.checked) {
+            theme.href = "../styles/dark-pages.css";
+        }
+        else {
+            theme.href = "../styles/light-pages.css";
+        }    
+    }
+
+    toggleSwitch.addEventListener('change', switchTheme, false);
+	</script>
 </body>
 
 </html>
