--- a/views/experience.html
+++ b/views/experience.html
@@ -14,8 +14,8 @@
 		<label class="switch">
 			<input type="checkbox" id="togBtn">
 			<div class="slider round">
-					<span class="on">ON</span>
-					<span class="off">OFF</span>
+				<span class="light">LIGHT</span>
+				<span class="dark">DARK</span>
 			</div>
 		</label>
 
@@ -169,6 +169,20 @@
 					mongoModal.style.display = "none";
 				}
 			}
+
+		const toggleSwitch = document.getElementsByClassName("switch")[0];
+    const theme = document.querySelector("#theme-link");
+
+    function switchTheme(e) {
+        if (e.target.checked) {
+            theme.href = "../styles/dark-pages.css";
+        }
+        else {
+            theme.href = "../styles/light-pages.css";
+        }    
+    }
+
+    toggleSwitch.addEventListener('change', switchTheme, false);
 		</script>
 </body>
 
