--- a/styles/light-pages.css
+++ b/styles/light-pages.css
@@ -14,6 +14,7 @@ header {
   top: 0;
   background-image: linear-gradient(#bfe4be, #effae5);
   height: 125px;
+  z-index: 1;
 }
 
 header img {
@@ -28,6 +29,11 @@ header img {
 header a {
   text-decoration: none;
   color: #18314F;
+}
+
+footer img {
+  width: 75px;
+  height: 75px;
 }
 
 a {
@@ -96,4 +102,9 @@ like a link */
 }
 .project-card:hover {
   color: #18314F;
+}
+
+.education-image {
+  height: 200px;
+  width: 200px;
 }
