--- a/views/projects.html
+++ b/views/projects.html
@@ -109,11 +109,11 @@
 
     function toggleLightDark(e) {
         if (e.target.checked) {
-            theme.href = "./styles/dark-home.css";
+            theme.href = "./styles/dark-pages.css";
             document.cookie = 'theme=dark';
         }
         else {
-            theme.href = "./styles/light-home.css";
+            theme.href = "./styles/light-pages.css";
             document.cookie = 'theme=light';
         }  
         console.log('Cookies are now: ' + document.cookie);
@@ -126,9 +126,9 @@
 
     function setTheme() {
         if (isDark()) {
-            theme.href = "./styles/dark-home.css";
+            theme.href = "./styles/dark-pages.css";
         } else {
-            theme.href = "./styles/light-home.css";
+            theme.href = "./styles/light-pages.css";
         }
     }
 
