--- a/views/experience.html
+++ b/views/experience.html
@@ -175,11 +175,11 @@
 
     function toggleLightDark(e) {
         if (e.target.checked) {
-            theme.href = "./styles/dark-pages.css";
+            theme.href = "../styles/dark-pages.css";
             document.cookie = 'theme=dark';
         }
         else {
-            theme.href = "./styles/light-pages.css";
+            theme.href = "../styles/light-pages.css";
             document.cookie = 'theme=light';
         }  
         console.log('Cookies are now: ' + document.cookie);
@@ -192,9 +192,9 @@
 
     function setTheme() {
         if (isDark()) {
-            theme.href = "./styles/dark-pages.css";
+            theme.href = "../styles/dark-pages.css";
         } else {
-            theme.href = "./styles/light-home.css";
+            theme.href = "../styles/light-home.css";
         }
     }
 
