--- a/views/experience.html
+++ b/views/experience.html
@@ -192,9 +192,13 @@
 
     function setTheme() {
         if (isDark()) {
-            theme.href = "../styles/dark-pages.css";
+						theme.href = "../styles/dark-pages.css";
+						var t = document.getElementById("togBtn");
+            t.checked = true;
         } else {
-            theme.href = "../styles/light-home.css";
+						theme.href = "../styles/light-home.css";
+						var t = document.getElementById("togBtn");
+            t.checked = false;
         }
     }
 
