--- a/views/experience.html
+++ b/views/experience.html
@@ -195,7 +195,7 @@
 						var t = document.getElementById("togBtn");
             t.checked = true;
         } else {
-						theme.href = "../styles/light-home.css";
+						theme.href = "../styles/light-pages.css";
 						var t = document.getElementById("togBtn");
             t.checked = false;
         }
