--- a/views/projects.html
+++ b/views/projects.html
@@ -120,6 +120,7 @@
     toggleSwitch.addEventListener('change', toggleLightDark, false);
 
     function isDark() {
+			console.log(document.cookie);
         return document.cookie.match(/theme=dark/i) != null;
     }
 
