--- a/views/experience.html
+++ b/views/experience.html
@@ -186,6 +186,7 @@
     toggleSwitch.addEventListener('change', toggleLightDark, false);
 
     function isDark() {
+			console.log(document.cookie);
         return document.cookie.match(/theme=dark/i) != null;
     }
 
